--- a/webdemo/templates/webdemo/index.html
+++ b/webdemo/templates/webdemo/index.html
@@ -19,10 +19,13 @@
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous" async>
         </script>
         <link rel="stylesheet" type="text/css" href="{% static 'webdemo/css/index.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'webdemo/css/jquery.loadingModal.css' %}">
 
         <!-- SCRIPTS -->
+        <script src="//code.jquery.com/jquery-3.1.1.slim.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+        <script src="{% static 'webdemo/js/jquery.loadingModal.js' %}"></script>
         
         <script>
             function drawGraph(inputHist, outputHist, inputLabel, outputLabel, divId) {
@@ -70,6 +73,23 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                        <div class="headerIcon">
+                            <a href="https://github.com/QData/TextAttack" target="_blank">
+                                <img src="https://www.flaticon.com/svg/static/icons/svg/25/25231.svg" width="28" />
+                            </a>
+                        </div>
+                        <!-- <div class="headerIcon">
+                            <a href="https://textattack.readthedocs.io/en/latest/" target="_blank">
+                                <img src="https://d2lp05f39ek59n.cloudfront.net/uploads/Read_the_Docs_product_img_259832408_read%20the%20docs.png" width="32" />
+                            </a>
+                        </div> -->
+                    </form>
+                </div>
                 
             </nav>
             
@@ -77,7 +97,7 @@
             <div class="row">
 
                 <div style="margin: 0 auto;">
-                    <form class="form-row align-items-center" style="margin: 0 auto;" action="/" method="post">
+                    <form class="form-row align-items-center" style="margin: 0 auto; padding: 1em;" method="post" id="attack_">
                         {% csrf_token %}
                         {% for field in form %}
                             <div class="col-auto">
@@ -92,13 +112,21 @@
                 </div>
 
                 <div class="col-12">
-                    <div class="row">
+                    <div class="row" style="margin-bottom: 2em;">
                         <div class="col-2"></div>
                         <div class="col-8">
                             {% for result in posts %}
-                                <div style="background:white; border-radius:8px; padding:2em 2em; box-shadow:2px 2px 9px #0000001f; margin-top:2em; position:relative;">
-                                    
-                                    <div class="row text-center">
+                                <div class="postCard">
+                                    <div class="informationBar">
+                                        <a class="informationBarLeft" href="https://huggingface.co/textattack/{{result.model_name}}" target="_blank">
+                                            Model: <b>{{ result.model_name }}</b>
+                                        </a>
+                                        <a class="informationBarRight" href="https://textattack.readthedocs.io/en/latest/3recipes/attack_recipes.html" target="_blank">
+                                            Recipe: <b>{{ result.recipe_name }}</b>
+                                        </a>
+                                    </div>
+
+                                    <div class="row text-center" style="margin-top: 1.5em">
                                         <div class="col-sm-6" style="padding:0 1.5em">
                                             <h4 style="color:#80c080">{{ result.input_string }}</h4>
                                         </div>
@@ -108,16 +136,21 @@
                                     </div>
                                     
                                     
-                                    <div style="position:absolute; bottom:1em; left:2em">
-                                        <a href="https://www.twitter.com" target="_blank">
-                                            <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c53e.png" width="30">
-                                        </a>
+                                    <div class="share">
+                                        <div class="tweet">
+                                            <a href="https://twitter.com/intent/tweet?text=Check%20out%20TextAttack%20at%20textattack.com" target="_blank">
+                                                <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c53e.png" width="35">
+                                            </a>
+                                        </div>
+                                        
                                     </div>
 
                                     <div style="position:absolute; bottom:1em; right:2em; color:#c5c5c5">{{ result.timestamp }} UTC</div>
-                                    <div style="margin-bottom: 2em;" id='myDiv{{ forloop.counter }}'></div>
+                                    <div style="margin-bottom: 2em;" id='plotly{{ forloop.counter }}'></div>
+                                    
+                                    
                                     <script>
-                                        drawGraph({{ result.input_histogram }}, {{ result.output_histogram }}, {{ result.input_label }}, {{ result.output_label }}, 'myDiv{{ forloop.counter }}')
+                                        drawGraph({{ result.input_histogram }}, {{ result.output_histogram }}, {{ result.input_label }}, {{ result.output_label }}, 'plotly{{ forloop.counter }}')
                                     </script>
                                 </div>
                             {% endfor %}
@@ -127,6 +160,46 @@
                 
             </div>
         </div>
+
+        <!-- async loader and handling of post request -->
+        <script>
+            function modifyModal(color, msg) {
+                var delay = function(ms){ return new Promise(function(r) { setTimeout(r, ms) }) };
+                var time = 1500;
+
+                delay(time)
+                        .then(function() { $('body').loadingModal('text', msg).loadingModal('backgroundColor', color); return delay(time);})
+                        .then(function() { $('body').loadingModal('hide'); return delay(time); } )
+                        .then(function() { $('body').loadingModal('destroy') ;} )
+                        .then(function() { location.reload(); } );
+            }
+
+            $('form').submit(function(e){
+                e.preventDefault();
+                $('body').loadingModal({
+                    position: 'auto',
+                    text: 'Running Attack...',
+                    color: '#fff',
+                    opacity: '0.7',
+                    backgroundColor: 'rgb(0,0,0)',
+                    animation: 'chasingDots'
+                });
+
+                var dataString = $("#attack_").serialize();
+                try {
+                    $.post("/attack_interactive", dataString, function(status){
+                        console.log(status);
+                        modifyModal('green', 'Success 🎉');
+                    });
+
+                } catch {
+                    modifyModal('red');
+                    setTimeout(() => { console.log('Succeeded'); }, 1000);
+                    $('body').loadingModal('destroy', 'Something went wrong 🤔');
+                }
+                
+            })
+        </script>
     </body>
 
 
