cache instead of db

--- a/webdemo/templates/webdemo/index.html
+++ b/webdemo/templates/webdemo/index.html
@@ -120,6 +120,7 @@
                         <div class="col-2"></div>
                         <div class="col-8">
                             {% for result in posts %}
+                                Hello
                                 <div class="postCard">
                                     <div class="informationBar">
                                         <a class="informationBarLeft" href="https://huggingface.co/textattack/{{result.model_name}}" target="_blank">
