--- a/webdemo/templates/webdemo/index.html
+++ b/webdemo/templates/webdemo/index.html
@@ -42,7 +42,7 @@
                     y: inputHist,
                     type: "bar",
                     opacity: 0.5,
-                    name: "input",
+                    name: "original",
                     marker: {
                         color: 'green',
                     },
@@ -52,7 +52,7 @@
                     y: outputHist,
                     type: "bar",
                     opacity: 0.6,
-                    name: "output",
+                    name: "perturbed",
                     marker: {
                         color: 'red',
                     },
