--- a/webdemo/static/webdemo/css/index.css
+++ b/webdemo/static/webdemo/css/index.css
@@ -31,7 +31,7 @@ label {
     position: absolute;
     top: 0;
     left: 0;
-    height: 5%;
+    height: 2.5em;
     width: 100%;
     font-size: small;
     color: rgb(129, 129, 129);
