--- a/webdemo/templates/webdemo/index.html
+++ b/webdemo/templates/webdemo/index.html
@@ -64,6 +64,19 @@
                 chart.render();
             }
 
+            function toggleSubmitButton(checkbox) {
+                if($(checkbox).is( ":checked" ) == true){
+                    $("#formSubmit").addClass("btn-danger");
+                    $("#formSubmit").removeClass("btn-success");
+                    $("#formSubmit").html("Run Attack");
+                }
+                else if($(checkbox).is( ":checked" ) == false){
+                    $("#formSubmit").addClass("btn-success");
+                    $("#formSubmit").removeClass("btn-danger");
+                    $("#formSubmit").html("Run Captum");
+                }
+            }
+
         </script>
 
 	</head>
@@ -106,8 +119,9 @@
                             </div>
                         {% endfor %}
                         <div class="col-auto">
-                            <button type="submit" class="btn btn-danger mt-4">Run Attack</button>
+                            <button id="formSubmit" type="submit" class="btn btn-danger mt-4">Run Attack</button>
                         </div>
+                        <input id="attackCheckbox" type="checkbox" onclick="toggleSubmitButton(this)" checked data-toggle="toggle">
                     </form>
                 </div>
 
@@ -116,50 +130,90 @@
                         <div class="col-2"></div>
                         <div class="col-8">
                             {% for result in posts %}
-                                <div class="postCard">
-                                    <div class="informationBar">
-                                        <a class="informationBarLeft" href="https://huggingface.co/textattack/{{result.model_name}}" target="_blank">
-                                            Model: <b>{{ result.model_name }}</b>
-                                        </a>
-                                        <a class="informationBarRight" href="https://textattack.readthedocs.io/en/latest/3recipes/attack_recipes.html" target="_blank">
-                                            Recipe: <b>{{ result.recipe_name }}</b>
-                                        </a>
-                                    </div>
-
-                                    <div class="row text-center" style="margin-top: 1.5em">
-                                        <div class="col-sm-6" style="padding:0 1.5em">
-                                            <h4 style="color:#80c080">{{ result.input_string }}</h4>
-                                        </div>
-                                        <div class="col-sm-6" style="border-left: solid 1px rgba(133, 135, 141, 0.788); padding:0 1.5em">
-                                            <h4 style="color:#ff6666">{{ result.output_string }}</h4>
-                                        </div>
-                                    </div>
-                                    
-                                    
-                                    <div class="share">
-                                        <div class="tweet">
-                                            <a href="https://twitter.com/intent/tweet?text=Check%20out%20TextAttack%20at%20textattack.com" target="_blank">
-                                                <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c53e.png" width="35">
+                                {% if result.type == "attack" %}
+                                    <div class="postCard">
+                                        <div class="informationBar">
+                                            <a class="informationBarLeft" href="https://huggingface.co/textattack/{{result.model_name}}" target="_blank">
+                                                Model: <b>{{ result.model_name }}</b>
+                                            </a>
+                                            <a class="informationBarRight" href="https://textattack.readthedocs.io/en/latest/3recipes/attack_recipes.html" target="_blank">
+                                                Recipe: <b>{{ result.recipe_name }}</b>
                                             </a>
                                         </div>
+
+                                        <div class="row text-center" style="margin-top: 1.5em">
+                                            <div class="col-sm-6" style="padding:0 1.5em">
+                                                <h4 style="color:#80c080">{{ result.input_string }}</h4>
+                                            </div>
+                                            <div class="col-sm-6" style="border-left: solid 1px rgba(133, 135, 141, 0.788); padding:0 1.5em">
+                                                <h4 style="color:#ff6666">{{ result.output_string }}</h4>
+                                            </div>
+                                        </div>
                                         
+                                        
+                                        <div class="share">
+                                            <div class="tweet">
+                                                <a href="https://twitter.com/intent/tweet?text=Check%20out%20TextAttack%20at%20textattack.com" target="_blank">
+                                                    <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c53e.png" width="35">
+                                                </a>
+                                            </div>
+                                            
+                                        </div>
+
+                                        <div style="position:absolute; bottom:1em; right:2em; color:#c5c5c5"></div>
+                                        <div class="row">
+                                            <div class="col-6" style="padding:1em">
+                                                <div id="chartContainerOriginal{{ forloop.counter }}" style="height: 370px; width: 100%; padding-bottom: 5em;"></div>
+                                            </div>
+                                            <div class="col-6" style="padding:1em">
+                                                <div id="chartContainerPerturbed{{ forloop.counter }}" style="height: 370px; width: 100%; padding-bottom: 2em;"></div>
+                                            </div>
+                                        </div>
+                                        
+                                        <script>
+                                            drawGraph("chartContainerOriginal{{ forloop.counter }}", {{ result.input_histogram }}, {{ result.input_label }}, "greenShades", "Original");
+                                            drawGraph("chartContainerPerturbed{{ forloop.counter }}", {{ result.output_histogram }}, {{ result.output_label }}, "redShades", "Perturbed");
+                                        </script>
+                                    </div>
+                                {% else %}
+                                    <div class="postCard">
+                                        <div class="informationBar">
+                                            <a class="informationBarLeft" href="https://huggingface.co/textattack/{{result.model_name}}" target="_blank">
+                                                Model: <b>{{ result.model_name }}</b>
+                                            </a>
+                                            <a class="informationBarRight" href="https://textattack.readthedocs.io/en/latest/3recipes/attack_recipes.html" target="_blank">
+                                                Recipe: <b>{{ result.recipe_name }}</b>
+                                            </a>
+                                        </div>
+
+                                        <div class="row text-center" style="margin-top: 1.5em">
+                                            <div id="captumInput{{ forloop.counter }}" class="col-sm-6" style="padding:2em 1.5em"></div>
+                                            <div id="captumOutput{{ forloop.counter }}" class="col-sm-6" style="border-left: solid 1px rgba(133, 135, 141, 0.788); padding:2em 1.5em"></div>
+                                        </div>
+                                        
+                                        
+                                        <div class="share">
+                                            <div class="tweet">
+                                                <a href="https://twitter.com/intent/tweet?text=Check%20out%20TextAttack%20at%20textattack.com" target="_blank">
+                                                    <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c53e.png" width="35">
+                                                </a>
+                                            </div>
+                                            
+                                        </div>
                                     </div>
 
-                                    <div style="position:absolute; bottom:1em; right:2em; color:#c5c5c5"></div>
-                                    <div class="row">
-                                        <div class="col-6" style="padding:1em">
-                                            <div id="chartContainerOriginal{{ forloop.counter }}" style="height: 370px; width: 100%; padding-bottom: 5em;"></div>
-                                        </div>
-                                        <div class="col-6" style="padding:1em">
-                                            <div id="chartContainerPerturbed{{ forloop.counter }}" style="height: 370px; width: 100%; padding-bottom: 2em;"></div>
-                                        </div>
-                                    </div>
-                                    
                                     <script>
-                                        drawGraph("chartContainerOriginal{{ forloop.counter }}", {{ result.input_histogram }}, {{ result.input_label }}, "greenShades", "Original");
-                                        drawGraph("chartContainerPerturbed{{ forloop.counter }}", {{ result.output_histogram }}, {{ result.output_label }}, "redShades", "Perturbed");
+                                        let inputTxt = "{{ result.html_input_string }}";
+                                        inputTxt = inputTxt.split("[PAD]")[0];
+                                        inputTxt = inputTxt.replaceAll("&lt;","<").replaceAll("&gt;", ">").replaceAll('"background-color"', 'background-color').replaceAll("&quot;", '"');
+                                        document.getElementById("captumInput{{ forloop.counter }}").insertAdjacentHTML("afterbegin", inputTxt);
+
+                                        let outputTxt = "{{ result.html_output_string }}";
+                                        outputTxt = outputTxt.split("[PAD]")[0];
+                                        outputTxt = outputTxt.replaceAll("&lt;","<").replaceAll("&gt;", ">").replaceAll('"background-color"', 'background-color').replaceAll("&quot;", '"');
+                                        document.getElementById("captumOutput{{ forloop.counter }}").insertAdjacentHTML("afterbegin", outputTxt);
                                     </script>
-                                </div>
+                                {% endif %}
                             {% endfor %}
                         </div>
                     </div>
@@ -193,9 +247,9 @@
                 });
 
                 var dataString = $("#attack_").serialize();
+                var endpoint = $("#attackCheckbox").is( ":checked" ) ? "/attack_interactive" : "/captum_interactive";
                 try {
-                    $.post("/attack_interactive", dataString, function(status){
-                        console.log(status);
+                    $.post(endpoint, dataString, function(status){
                         modifyModal('green', 'Success 🎉');
                     });
 
